# Webserv

./: .gitignore  CMakeLists.txt  Listen.cpp  Listen.hpp  Makefile  Makefile_diana  README.md  client  ss.yml  steps.txt  webserv
YoupiBanane/: youpi.bad_extension  youpi.bla
YoupiBanane/nop/: other.pouic  youpi.bad_extension
config_files/: complete.conf  default copy.conf  default.conf  error.conf  minimum_req.conf  multiple_servers.conf  nginx.conf  server.conf  test.conf  tester.conf
config_files/invalid/: autoindex_inv1.conf  duplicate_location.conf  errorpage_4.conf  host_3.conf  port_1.conf  port_4.conf  redirection_2.conf  redirection_6.conf  same_port_and_server_name.conf  same_port_same_servername.conf  server_name1.conf
http_tester/: RequestTester.cpp  RequestTester.hpp  http_test.sh  many_clients.sh  test
includes/: Client.hpp  ConfigChecker.hpp  Configurator.hpp  Location.hpp  Parser.cpp  Parser.hpp  Request.hpp  Server.hpp  Webserver.hpp  settings.hpp  utils.hpp
src/: AConfigBlock.cpp  AConfigBlock.hpp  Client.cpp  Client_server.cpp  ConfigChecker.cpp  ConfigChecker.hpp  Configurator.cpp  Example.cpp  Example.hpp  Location.cpp  Parser.cpp  Request.cpp  Server.cpp  ServerBlock.cpp  ServerBlock.hpp  Webserver copy.cpp  Webserver.cpp  kkk  ll  main.cpp  utils.cpp  utils.hpp
src/configs/: Configurator.cpp  Configurator.hpp  FileUtils.cpp  FileUtils.hpp  LocationContext.cpp  LocationContext.hpp  Parser.cpp  Parser.hpp  ServerContext.cpp  ServerContext.hpp  configTester.cpp
src/http/: CGI.cpp  CGI.hpp  HttpData.cpp  HttpData.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp  ResponseHeaders.cpp  ResponseHeaders.hpp
src/utils/: settings.hpp  utils.cpp  utils.hpp
test_files/: latijn.txt
tests/: CMakeLists.txt  catch.hpp  conf_file_invalid.cpp  integration_tests.cpp
webpages/: 301.html  400.html  403.html  404.html  405.html  413.html
www/: add.html  add_post.html  cgi_get.html  cgi_post.html  cgi_test.cpp  index.html  php_upload.html  post_msg.html  upload_file.html  upload_file2.html
www/cgi-bin/: hello.py
(+71 files in other folders)
